src/objects/QB_Credit_Memo__c.object
<CustomObject>
    <description>Credit memos issued against the invoice.</description>
    <fields>
        <fullName>Credit_Memo_Amount__c</fullName>
        <description>The total amount of the credit memo.</description>
        <inlineHelpText>The total amount of the credit memo.</inlineHelpText>
        <label>Credit Memo Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Applied_Amount__c</fullName>
        <description>The amount of the credit memo applied to this invoice.</description>
        <inlineHelpText>The amount of the credit memo applied to this invoice.</inlineHelpText>
        <label>Credit Memo Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Applied_Date__c</fullName>
        <description>The date the credit memo applied amount was applied to the invoice.</description>
        <inlineHelpText>The date the credit memo applied amount was applied to the invoice.</inlineHelpText>
        <label>Credit Memo Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Date__c</fullName>
        <description>The date the credit memo was issued against the invoice.</description>
        <inlineHelpText>The date the credit memo was issued against the invoice.</inlineHelpText>
        <label>Credit Memo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>The invoice the credit memo was issued against.</description>
        <inlineHelpText>The invoice the credit memo was issued against.</inlineHelpText>
        <label>Invoice Number</label>
        <referenceTo>QB_Invoice__c</referenceTo>
        <relationshipLabel>QuickBooks Credit Memos</relationshipLabel>
        <relationshipName>QuickBooks_Credit_Memos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QB_Credit_MemoTXN_ID__c</fullName>
        <description>The internal ID of the credit memo in QuickBooks.</description>
        <inlineHelpText>The internal ID of the credit memo in QuickBooks.</inlineHelpText>
        <label>QuickBooks Credit MemoTXN ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <label>QuickBooks Credit Memo</label>
    <nameField>
        <label>Credit Memo Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Credit Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>